--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="sign_up">Sign Up</string>
     <string name="select_user">Select User</string>
     <string name="type_a_message">Type A Message</string>
+    <string name="gallery">Gallery</string>
+    <string name="camera">Camera</string>
 </resources>
